#4 Fix issue with non-interactable object behind floating form

--- a/public/assets/css/pages/global_form.css
+++ b/public/assets/css/pages/global_form.css
@@ -31,6 +31,7 @@
 
     margin: var(--form_container_margin_left_right) var(--form_container_margin_top_bottom);
     z-index: var(--form_container_z_index);
+    pointer-events: none;
 }
 
 #sample_form{
@@ -40,6 +41,7 @@
     height: var(--global_form_dimension);
     margin: var(--global_form_margin_left_right) var(--global_form_margin_top_bottom);
     border-radius: 0.75rem;
+    pointer-events: none;
 }
 
 .floating_action_btn {
@@ -60,6 +62,7 @@
             background .25s ease,
             box-shadow .25s ease,
             transform .15s ease;
+    pointer-events: auto;
 }
 
 /*.floating_action_btn:active { transform: translateY(1px) scale(.98); }*/
